Added open item to catalog link operation and stamp Added bounds changes to time range navigator

--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-preview-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-preview-operation.html
@@ -23,6 +23,9 @@
     </template>
 
     <style>
+        :host .container {
+            margin: 0 !important;
+        }
         :host a {
             cursor: pointer;
             color: var(--default-primary-color);
