--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-behavior.html
@@ -105,6 +105,7 @@
             stamp.isHighlight = this._isHighlight(moldStamp);
             stamp.isPicture = this._isPicture(moldStamp);
             stamp.isOpenDialogOperation = this._isOpenDialogOperation(moldStamp);
+            stamp.isOperation = this._isOperation(moldStamp);
             stamp.isDownloadOperation = this._isDownloadOperation(moldStamp);
             stamp.isPreviewOperation = this._isPreviewOperation(moldStamp);
             stamp.isExportOperation = this._isExportOperation(moldStamp);
@@ -132,6 +133,7 @@
             this._addStampIconProperties(stamp, moldBlock, moldStamp);
             this._addStampRatingProperties(stamp, moldStamp);
             this._addStampBreadcrumbsProperties(stamp, moldBlock, moldStamp);
+            this._addStampOperationProperties(stamp, moldStamp);
             this._addStampDownloadOperationProperties(stamp, moldStamp);
             this._addStampPreviewOperationProperties(stamp, moldStamp);
             this._addStampExportOperationProperties(stamp, moldStamp);
@@ -168,6 +170,13 @@
             var value = this._valueOf(moldBlock, moldStamp);
             var tree = (value != "") ? JSON.parse(value) : { items: [] };
             stamp.properties.breadcrumbs = this.treeToBreadcrumbs(tree);
+        },
+
+        _addStampOperationProperties : function(stamp, moldStamp) {
+            if (!stamp.isOperation) return;
+            stamp.properties.mode = this._propertyValueOf(moldStamp,'mode').toLowerCase();
+            stamp.properties.alexandriaIcon = this._propertyValueOf(moldStamp,'alexandria-icon');
+            stamp.properties.confirm = this._parseFunctions(this._propertyValueOf(moldStamp,'confirm'));
         },
 
         _addStampDownloadOperationProperties : function(stamp, moldStamp) {
@@ -298,6 +307,12 @@
 
         _isOpenDialogOperation : function(stamp) {
             return this.mode != "map" && stamp.shape === "open-dialog-operation";
+        },
+
+        _isOperation : function(stamp) {
+            return this._isDownloadOperation(stamp) || this._isExportOperation(stamp) ||
+                   this._isPreviewOperation(stamp) || this._isTaskOperation(stamp) ||
+                   this._isOpenDialogOperation(stamp);
         },
 
         _isDownloadOperation : function(stamp) {
