--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-block.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-block.html
@@ -22,6 +22,7 @@
 <link rel="import" href="../../alexandria-page-container.html">
 <link rel="import" href="alexandria-mold-hyperlink.html">
 <link rel="import" href="alexandria-mold-hyperlinks.html">
+<link rel="import" href="alexandria-mold-operation-trigger.html">
 <link rel="import" href="alexandria-mold-download-operation.html">
 <link rel="import" href="alexandria-mold-export-operation.html">
 <link rel="import" href="alexandria-mold-preview-operation.html">
@@ -82,9 +83,6 @@
                     </div>
                 </div>
             </template>
-            <template is="dom-if" if="[[stamp.isOpenDialogOperation]]">
-                <paper-button raised stamp$="[[stamp.name]]" on-tap="_openDialog" style$="[[stamp.properties.defaultStyle]];[[stamp.properties.style]]">[[stamp.label]]</paper-button>
-            </template>
             <template class="page-template" is="dom-if" if="[[stamp.isPage]]">
                 <div class="page-layer" style$="height:[[stamp.height]];[[stamp.properties.defaultStyle]];[[stamp.properties.style]]"></div>
             </template>
@@ -111,17 +109,20 @@
                     <alexandria-mold-hyperlink name="[[stamp.name]]" label="[[stamp.properties.title]]" on-item-tap="_navigateCatalog" styles="[[stamp.properties.defaultStyle]];[[stamp.properties.style]]"></alexandria-mold-hyperlink>
                 </div>
             </template>
+            <template is="dom-if" if="[[stamp.isOpenDialogOperation]]">
+                <alexandria-mold-operation-trigger title="[[stamp.label]]" stamp$="[[stamp.name]]" on-execute="_openDialog" style$="[[stamp.properties.defaultStyle]];[[stamp.properties.style]]" icon="[[stamp.properties.alexandriaIcon]]" mode="[[stamp.properties.mode]]"></alexandria-mold-operation-trigger>
+            </template>
             <template is="dom-if" if="[[stamp.isDownloadOperation]]">
-                <alexandria-mold-download-operation name$="[[stamp.name]]" title="[[stamp.properties.title]]" options="[[stamp.properties.options]]" on-download-option="_download" styles="[[stamp.properties.defaultStyle]];[[stamp.properties.style]]"></alexandria-mold-download-operation>
+                <alexandria-mold-download-operation name$="[[stamp.name]]" title="[[stamp.properties.title]]" options="[[stamp.properties.options]]" icon="[[stamp.properties.alexandriaIcon]]" mode="[[stamp.properties.mode]]" on-download-option="_download" styles="[[stamp.properties.defaultStyle]];[[stamp.properties.style]]"></alexandria-mold-download-operation>
             </template>
             <template is="dom-if" if="[[stamp.isPreviewOperation]]">
-                <alexandria-mold-preview-operation name$="[[stamp.name]]" title="[[stamp.properties.title]]" document="[[stamp.properties.document]]" style$="[[stamp.properties.defaultStyle]];[[stamp.properties.style]]"></alexandria-mold-preview-operation>
+                <alexandria-mold-preview-operation name$="[[stamp.name]]" title="[[stamp.properties.title]]" document="[[stamp.properties.document]]" icon="[[stamp.properties.alexandriaIcon]]" mode="[[stamp.properties.mode]]" style$="[[stamp.properties.defaultStyle]];[[stamp.properties.style]]"></alexandria-mold-preview-operation>
             </template>
             <template is="dom-if" if="[[stamp.isExportOperation]]">
-                <alexandria-mold-export-operation name$="[[stamp.name]]" title="[[stamp.properties.title]]" options="[[stamp.properties.options]]" from="[[stamp.properties.from]]" to="[[stamp.properties.to]]" on-export-option="_export" style$="[[stamp.properties.defaultStyle]];[[stamp.properties.style]]"></alexandria-mold-export-operation>
+                <alexandria-mold-export-operation name$="[[stamp.name]]" title="[[stamp.properties.title]]" options="[[stamp.properties.options]]" icon="[[stamp.properties.alexandriaIcon]]" mode="[[stamp.properties.mode]]" from="[[stamp.properties.from]]" to="[[stamp.properties.to]]" on-export-option="_export" style$="[[stamp.properties.defaultStyle]];[[stamp.properties.style]]"></alexandria-mold-export-operation>
             </template>
             <template is="dom-if" if="[[stamp.isTaskOperation]]">
-                <paper-button raised stamp$="[[stamp.name]]" on-tap="_executeTask" style$="[[stamp.properties.defaultStyle]];[[stamp.properties.style]]">[[stamp.label]]</paper-button>
+                <alexandria-mold-operation-trigger title="[[stamp.label]]" stamp$="[[stamp.name]]" on-execute="_executeTask" style$="[[stamp.properties.defaultStyle]];[[stamp.properties.style]]" icon="[[stamp.properties.alexandriaIcon]]" mode="[[stamp.properties.mode]]"></alexandria-mold-operation-trigger>
             </template>
             <template is="dom-if" if="[[stamp.isSnippet]]">
                 <div hidden$="[[!stamp.value.length]]" style$="display:none;[[stamp.properties.defaultStyle]];[[stamp.properties.style]]" class="snippet-layer">
